fixing alignment on the icons

--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ body {
 }
 
 .social-icon {
-	margin-left: 15%;
+	margin: 1rem;
 }
 
 .second-header {
@@ -76,11 +76,11 @@ body {
  	display: block;
  }
 
-.fades {
+.fade {
 	margin:0;
 }
 
-.fades li a:hover {
+.fade li a:hover {
 	opacity: 0.6;
 	-webkit-transition: all 0.4s ease-in-out;
 	transition: all 0.2s ease-in-out;
